bat.bool1.posneg.PosNeg.scala.error
Erreur de compilation :
PosNeg:3: error: ')' expected but integer literal found.
    if( && a<0 && b<0){
             ^PosNeg:8: error: illegal start of simple expression
  }else{ 
  ^